--- a/views/views.xml
+++ b/views/views.xml
@@ -84,8 +84,9 @@
       <field name="model">obrador.alergenos</field>
       <field name="arch" type="xml">
         <tree editable="bottom">
-          <field name="name" editable = "true"/>
-          <field name="recetas_count"/>
+          <field name="name" />
+          <field name="recetas_count" readonly = "1" style = "width: 10%;"/>
+          <field name="recetas_tags" readonly = "1"/>
         </tree>
       </field>
     </record>
