--- a/views/views.xml
+++ b/views/views.xml
@@ -86,7 +86,7 @@
         <tree editable="bottom">
           <field name="name" />
           <field name="recetas_count" readonly = "1" style = "width: 10%;"/>
-          <field name="recetas_tags" readonly = "1"/>
+          <field name="recetas_ids" readonly = "1" widget="many2many_tags"/>
         </tree>
       </field>
     </record>
