--- a/views/views.xml
+++ b/views/views.xml
@@ -15,9 +15,10 @@
       <field name="arch" type="xml">
         <tree>
           <field name="producto_id" string = "Nombre" />
-          <field name="cant" string = "Cantidad"/>
+          <field name="cant" string = "Cantidad receta"/>
           <field name="categ" string = "Categoria"/>
           <field name= "alergenos_ids" string = "Alérgenos"  widget = "many2many_tags"/>
+          <field name= "ultima_fecha_produc" string = "Fecha última producción"/>
         </tree>
       </field>
     </record>
