Eror en herencia de product

--- a/views/views.xml
+++ b/views/views.xml
@@ -3,6 +3,22 @@
 
     <!-- actions opening views on models -->
 
+    <record model="ir.ui.view" id="product_form_view_inherit" >
+      <field name="name">product.product.form.inherit</field>
+      <field name="model">product.product</field>
+      <field name="inherit_id"ref = "product_normal_form_view"/>
+      <field name="arch" type="xml">
+        <xpath expr="//sheet" position="inside">
+          <group>
+            <field name="alergenos_ids" widget= "many2many_tags"/> 
+          </group>
+          <group>
+            <field name="receta_id" widget="many2one"/>
+          </group>
+        </xpath>
+      </field>
+    </record>
+
     <record model="ir.actions.act_window" id="obrador.action_window_recetas">
       <field name="name">Recetas</field>
       <field name="res_model">obrador.recetas</field>
@@ -14,7 +30,7 @@
       <field name="model">obrador.recetas</field>
       <field name="arch" type="xml">
         <tree>
-          <field name="producto_id" string = "Nombre" />
+          <field name="producto_id" string = "Producto" />
           <field name="cant" string = "Cantidad receta"/>
           <field name="categ" string = "Categoria"/>
           <field name= "alergenos_ids" string = "Alérgenos"  widget = "many2many_tags"/>
@@ -45,7 +61,7 @@
                 <field name="notas"/>
               </group>
               <group>
-                <field name = "alergenos_ids" widget= "many2many_checkboxes"/>
+                <field name = "alergenos_ids" widget= "many2many_tags"/>
               </group> 
             </group>
             <group>
