--- a/views/views.xml
+++ b/views/views.xml
@@ -6,14 +6,14 @@
     <record model="ir.ui.view" id="product_form_view_inherit" >
       <field name="name">product.product.form.inherit</field>
       <field name="model">product.product</field>
-      <field name="inherit_id"ref = "product_normal_form_view"/>
+      <field name="inherit_id" ref = "product_normal_form_view"/>
       <field name="arch" type="xml">
         <xpath expr="//sheet" position="inside">
           <group>
             <field name="alergenos_ids" widget= "many2many_tags"/> 
           </group>
           <group>
-            <field name="receta_id" widget="many2one"/>
+            <field name="receta_id"/>
           </group>
         </xpath>
       </field>
